cleanup and fix some sonarcloud issues